Updating messy pages

--- a/content/ex-machina/2016/005. Drones Should be Regulated by City Traffic Laws not Aviation Regulations.md
+++ b/content/ex-machina/2016/005. Drones Should be Regulated by City Traffic Laws not Aviation Regulations.md
@@ -9,7 +9,7 @@ Archive URL:
 writingStatus: published
 publication: Ex Machina
 
-title: "Drones Should be Regulated by City Traffic Laws not Aviation Regulations"
+title: "005. Drones Should be Regulated by City Traffic Laws not Aviation Regulations"
 date: 2016-06-22
 ---
 
