--- a/content/ex-machina/2024/402. Networked Privacy.md
+++ b/content/ex-machina/2024/402. Networked Privacy.md
@@ -18,16 +18,7 @@ date: 2024-11-06
 
  _Privacy laws offer were designed for a time before networked privacy. The agency they offer is useless now. Laws alone cannot protect our data. We need to do additional privacy work to secure it._
 
-# Table of Contents
-[#1. Article Text](../#1.-article-text)
-  - [#1.1 Individual Rights](../#1.1-individual-rights)
-  - [#1.2 Privacy Work](../#1.2-privacy-work)
-  - [#1.3 Share Less](../#1.3-share-less)
-  - [#2. Article Screenshot](../#2.-article-screenshot)
-  - [#3. Endnotes](../#3.-endnotes)
-  - [#4. Related Notes](../#4.-related-notes)
-
-## 1. Article Text
+---
 
 I remember an audience member once asked [Justice B.N. Srikrishna](../justice-srikrishna) a pointed question about [Privacy](../privacy) in the context of social media at one of the public consultations held in relation to his report on data protection. 
 
@@ -35,7 +26,7 @@ I remember an audience member once asked [Justice B.N. Srikrishna](../justice-sr
 
 That was the only time I’ve seen [Justice Srikrishna](../justice-srikrishna) at a loss for words. Even though he had, by then, spent countless hours deliberating all sorts of provisions that should and shouldn’t go into India’s draft privacy law, that question forced him to confront the complexity of networked privacy.
 
-### 1.1 Individual Rights
+### Individual Rights
 
 We have be trained to think of [Privacy](../privacy) as an individual right. Our laws have been designed to give individuals agency over their personal data—so that they get to decide who can process their personal data and for what. This is also why tech companies design privacy settings to be configurable at an individual level—so that users can determine what can and cannot be done with personal data. But individuals have very little actual control over their privacy.
 
@@ -43,7 +34,7 @@ In her book _[_INBOX/Readwise/The Private Is Political](../_inbox/readwise/the-p
 
 Even if you’ve never heard the term ‘networked privacy’ before, you most certainly have suffered its consequences. We’ve all shared some personal news with a family member only to find, a few hours later, that its been proudly posted on some WhatsApp group or the other and a bunch of ‘uncles’ are gleefully discussing it. We’ve all posted comments on a social network only to have it resurface elsewhere— more often than not quoted entirely out of context. Since there is no way to anticipate any of these consequences, what is the use of trying to exercise our agency in guarding against them?
 
-### 1.2 Privacy Work
+### Privacy Work
 
 Anyone who has been burnt by the problem of ‘networked privacy’ intuitively knows that our privacy laws don’t go far enough. If we want to protect our privacy, we will need to put in some effort. This is what Marwick calls “[privacy work](../privacy-work)," referring to the additional measures we must all take to ensure that our personal data isn’t used to cause us harm.
 
@@ -51,33 +42,10 @@ Privacy work takes many forms. For the more technically savvy among us, this mea
 
 There are some who choose to secure their privacy through obscurity, purposely maintaining a low profile so that they never, even by accident, allow any light to shine on any part of their life. They choose handles that are purposely neutral, masking any hint of their real name, age or location, so that nobody can infer who they are from their online persona. Others practice steganography[^3]. This involves communicating through coded language embedded within public posts that nobody other than those for whom these messages are intended can decode, or even recognize that such posts contain any deeper meaning than what’s apparent.
 
-### 1.3 Share Less
+### Share Less
 
 But, by far, the most common form of privacy work we practice is simply sharing less. Anyone who has been online long enough knows that everything you post can and will become public, no matter how well you trust the chat group to which you have sent it or the diversity of measures you’ve put in place to make sure it doesn’t leak. In my own social circle, I’ve noticed more and more people starting to take this so seriously that they are now only reachable via SMS and email, having chosen to disengage from all social media platforms.
 
 I am not sure if everyone needs to go that far. Not all of us need to suffer the trade-offs that this level of online de-escalation demands. What we must do is adjust the filters in our brains, so that we make sure we aren’t sharing anything we’d rather keep to ourselves.
 
 Speaking for myself, I have decided that I am not going to post anything unless I don’t mind seeing it against my name on the front page of The New York Times.
-
----
-## 2. Article Screenshot
-![402. Networked Privacy.jpg](../402.-networked-privacy.jpg)
-
----
-## 3. Endnotes
-
-[^1]: https://www.perplexity.ai/page/vpns-and-privacy-t_EZ6UGXQouv6.7G3iWlxg
-[^2]: https://www.howtogeek.com/444644/what-is-a-finsta-and-how-do-you-use-one/
-[^3]: https://www.geeksforgeeks.org/what-is-steganography/
-
----
-## 4. Related Notes
-- [398. Homo Privaticus](../398.-homo-privaticus)
-- [264. Privacy Self-Management](../264.-privacy-self-management)
-- [263. Calculated Communication](../263.-calculated-communication)
-- [142. How Capitalism Evolved to Drop its Defence of Privacy](../142.-how-capitalism-evolved-to-drop-its-defence-of-privacy)
-- [111. When parents damage their children’s digital privacy](../111.-when-parents-damage-their-children’s-digital-privacy)
-- [039. A New Paradigm for Privacy](../039.-a-new-paradigm-for-privacy)
-- [006. The Accountability Framework](../006.-the-accountability-framework)
-
----
