--- a/content/ex-machina/2025/417. Consent Managers.md
+++ b/content/ex-machina/2025/417. Consent Managers.md
@@ -10,7 +10,7 @@ category: article
 writingStatus: published
 publication: Ex Machina
 
-title: "Consent Managers"
+title: "417. Consent Managers"
 date: 2025-02-26
 ---
 
