--- a/content/ex-machina/2025/418. Threading the Needle.md
+++ b/content/ex-machina/2025/418. Threading the Needle.md
@@ -9,7 +9,7 @@ category: article
 writingStatus: published
 publication: Ex Machina
 
-title: "Threading the Needle"
+title: "418. Threading the Needle"
 date: 2025-03-05
 ---
 
