--- a/content/ex-machina/2025/420. The Cost of Cold.md
+++ b/content/ex-machina/2025/420. The Cost of Cold.md
@@ -9,7 +9,7 @@ category: article
 writingStatus: published
 publication: Ex Machina
 
-title: "The Cost of Cold"
+title: "420. The Cost of Cold"
 date: 2025-03-19
 ---
 
